--- a/ExecuteStageUnitTests/Makefile
+++ b/ExecuteStageUnitTests/Makefile
@@ -1,8 +1,8 @@
 # Makefile
 TOPLEVEL_LANG = verilog
-VERILOG_SOURCES = C:\Users\orucc\Desktop\Coding_Projects\Kasirga_Ates_Teknofest\Teknofest-Ates-Processor-Design\KasirgaVerilogCopy\KasirgaVerilogCopy.srcs\sources_1\new\ArithmeticLogicUnit.v
+VERILOG_SOURCES = $(shell pwd)/ArithmeticLogicUnit.v
 TOPLEVEL = ArithmeticLogicUnit
-MODULE = alu_test
-SIM = icarus
+MODULE = alu_test  # Python test modülü adı
+SIM = icarus  # Kullanılacak simülatör
 
 include $(shell cocotb-config --makefiles)/Makefile.sim
