test files created and arithmetic logic tested except for subtaction that wil be tested later

--- a/ExecuteStageUnitTests/Makefile
+++ b/ExecuteStageUnitTests/Makefile
@@ -1,6 +1,10 @@
 # Makefile
 TOPLEVEL_LANG = verilog
-VERILOG_SOURCES = $(shell pwd)/ArithmeticLogicUnit.v
+VERILOG_SOURCES += ../ExecuteStageUnitTests/*.v
+VERILOG_SOURCES += ../ExecuteStageUnitTests/*.vh
+
+IVERILOG_OPTS = -I ../ExecuteStageUnitTests/*.vh
+
 TOPLEVEL = ArithmeticLogicUnit
 MODULE = alu_test  # Python test modülü adı
 SIM = icarus  # Kullanılacak simülatör
