bracnch resolver tested again and debusgs added to decode step

--- a/ExecuteStageUnitTests/Makefile
+++ b/ExecuteStageUnitTests/Makefile
@@ -2,7 +2,7 @@
 TOPLEVEL_LANG = verilog
 SIM = icarus  # Kullanılacak simülatör
 SOURCE = ../KasirgaVerilogCopy/KasirgaVerilogCopy.srcs/sources_1/new
-MODULE := branch_resolver_test
+MODULE := alu_test
 #TOPLEVEL := BranchResolverUnit
 VERILOG_INCLUDE_DIRS = $(SOURCE)
 VERILOG_SOURCES +=$(SOURCE)/ArithmeticLogicUnit.v \
@@ -24,3 +24,17 @@ endif
 
 export RANDOM_SEED := 123456789
 include $(shell cocotb-config --makefiles)/Makefile.sim
+
+
+.PHONY: clean
+clean::
+		-rm -f results.xml
+		-rm -f transcript
+		-rm -f *.vcd
+		-rm -f *.wlf
+		-rm -f *.fst
+		-rm -f modelsim.ini
+		-rm -f *.vstf
+		-rm -f *.log
+		-rm -f *.sign
+		-rm -f *.signadr
